--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -49,10 +49,10 @@ jobs:
       id: build-docker-image
       run: |
         ls -la 
-        docker build . -f Dockerfile -t dhruvin30/demo-image-test:latest
+        docker build . -f Dockerfile -t urkoren/simple-java:latest
     - name: push the docker image
       id: push-docker-image
-      run: docker push ${{secrets.DOCKERHUB_USERNAME}}/demo-image-test:latest
+      run: docker push ${{secrets.DOCKERHUB_USERNAME}}/simple-java:latest
 
     - name: Commit Version Increment
       run: |
