--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -54,6 +54,16 @@ jobs:
       id: push-docker-image
       run: docker push ${{secrets.DOCKERHUB_USERNAME}}/simple-java:latest
 
+    - name: install ssh keys
+      run: |
+        install -m 600 -D /dev/null ~/.ssh/id_rsa
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        ssh-keyscan -H ${{ secrets.a }} > ~/.ssh/known_hosts
+    - name: connect and pull
+      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker run urkoren/simple-java:latest && exit"
+    - name: cleanup
+      run: rm -rf ~/.ssh
+
     - name: Commit Version Increment
       run: |
         git config --global user.name "GitHub Actions"
