--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,50 +28,33 @@ jobs:
         distribution: 'temurin'
         cache: maven
         
-    - name: Increment Patch Version
-      run: |
-        CURRENT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-        MAJOR_VERSION=$(echo $CURRENT_VERSION | cut -d. -f1)
-        MINOR_VERSION=$(echo $CURRENT_VERSION | cut -d. -f2)
-        PATCH_VERSION=$(echo $CURRENT_VERSION | cut -d. -f3)
-        NEW_PATCH_VERSION=$((PATCH_VERSION + 1))
-        NEW_VERSION="$MAJOR_VERSION.$MINOR_VERSION.$NEW_PATCH_VERSION"
-        mvn versions:set -DnewVersion=$NEW_VERSION
+    - name: Bump version
+      id: bump
+      uses: mickem/gh-action-bump-maven-version@1.0.0
 
-    - name: login to docker hub
-      id: docker-hub
-      env:
-        username: ${{secrets.DOCKERHUB_USERNAME}}
-        password: ${{secrets.DOCKERHUB_PASSWORD}}
-      run: |
-        docker login -u $username -p $password 
-    - name: build the docker image
-      id: build-docker-image
-      run: |
-        ls -la 
-        docker build . -f Dockerfile -t urkoren/simple-java:latest
-    - name: push the docker image
-      id: push-docker-image
-      run: docker push ${{secrets.DOCKERHUB_USERNAME}}/simple-java:latest
+    # - name: login to docker hub
+    #   id: docker-hub
+    #   env:
+    #     username: ${{secrets.DOCKERHUB_USERNAME}}
+    #     password: ${{secrets.DOCKERHUB_PASSWORD}}
+    #   run: |
+    #     docker login -u $username -p $password 
+    # - name: build the docker image
+    #   id: build-docker-image
+    #   run: |
+    #     ls -la 
+    #     docker build . -f Dockerfile -t urkoren/simple-java:latest
+    # - name: push the docker image
+    #   id: push-docker-image
+    #   run: docker push ${{secrets.DOCKERHUB_USERNAME}}/simple-java:latest
 
-    - name: install ssh keys
-      run: |
-        install -m 600 -D /dev/null ~/.ssh/id_rsa
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
-    - name: connect and pull
-      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker run urkoren/simple-java:latest && exit"
-    - name: cleanup
-      run: rm -rf ~/.ssh
+    # - name: install ssh keys
+    #   run: |
+    #     install -m 600 -D /dev/null ~/.ssh/id_rsa
+    #     echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+    #     ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+    # - name: connect and pull
+    #   run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker run urkoren/simple-java:latest && exit"
+    # - name: cleanup
+    #   run: rm -rf ~/.ssh
 
-    - name: Commit Version Increment
-      run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-        git add pom.xml
-        git commit -m "Incremented version to $(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)"
-        git push origin master
-
-    # # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    # - name: Update dependency graph
-    #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
