--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Dependency Review
       uses: actions/dependency-review-action@v4
       with:
-        fail-on-severity: moderate
+        fail-on-severity: critical
         deny-licenses: LGPL-2.0, BSD-2-Clause
         
     # - name: Bump version
