--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,10 +29,11 @@ jobs:
         cache: maven
 
     - name: Dependency Review
-      uses: actions/dependency-review-action@v4
+    - uses: actions/dependency-review-action@v2
       with:
-        fail-on-severity: critical
-        deny-licenses: LGPL-2.0, BSD-2-Clause
+        allow-licenses: MIT, Apache-2.0, ISC, BSD-2-Clause, 0BSD, NOASSERTION
+        base-ref: ${{ github.event.pull_request.base.sha || 'main' }}
+        head-ref: ${{ github.event.pull_request.head.sha || github.ref }}
         
     # - name: Bump version
     #   id: bump
