--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -50,7 +50,7 @@ jobs:
 
     - name: Scan Docker image 🐳
       uses: snyk/actions/docker@master
-      continue-on-error: true
+      continue-on-error: false
       with:
         image: ${{secrets.DOCKERHUB_USERNAME}}/simple-java:latest
         args: --file=dockerfile --severity-threshold=high --sarif-file-output=snyk.sarif
