--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,9 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+        
+    - name: Run Codacy Analysis CLI
+      uses: codacy/codacy-analysis-cli-action@master
 
     # - name: Dependency Review
     #   uses: actions/dependency-review-action@v2
