--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -50,8 +50,8 @@ jobs:
         images: ghcr.io/sigstore/sample-honk
         tags: type=sha,format=long
         
-    - name: Run Codacy Analysis CLI
-      uses: codacy/codacy-analysis-cli-action@master
+    # - name: Run Codacy Analysis CLI
+    #   uses: codacy/codacy-analysis-cli-action@master
 
     # - name: Dependency Review
     #   uses: actions/dependency-review-action@v2
@@ -73,14 +73,14 @@ jobs:
       run: |
         docker login -u $username -p $password 
 
-    - name: Scan Docker image 🐳
-      uses: snyk/actions/docker@master
-      continue-on-error: false
-      with:
-        image: ${{secrets.DOCKERHUB_USERNAME}}/simple-java:latest
-        args: --file=dockerfile --severity-threshold=high --sarif-file-output=snyk.sarif
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYC_CONTAINER_SCAN }}
+    # - name: Scan Docker image 🐳
+    #   uses: snyk/actions/docker@master
+    #   continue-on-error: false
+    #   with:
+    #     image: ${{secrets.DOCKERHUB_USERNAME}}/simple-java:latest
+    #     args: --file=dockerfile --severity-threshold=high --sarif-file-output=snyk.sarif
+    #   env:
+    #     SNYK_TOKEN: ${{ secrets.SNYC_CONTAINER_SCAN }}
         
     - name: build the docker image
       id: build-docker-image
@@ -90,9 +90,22 @@ jobs:
 
 
 
-    # - name: push the docker image
-    #   id: push-docker-image
-    #   run: docker push ${{secrets.DOCKERHUB_USERNAME}}/simple-java:latest
+    - name: push the docker image
+      id: push-docker-image
+      run: docker push ${{secrets.DOCKERHUB_USERNAME}}/simple-java:latest
+
+    - name: Sign image with a key
+      run: |
+        images=""
+        for tag in ${TAGS}; do
+          images+="${tag}@${DIGEST} "
+        done
+        cosign sign --yes --key env://COSIGN_PRIVATE_KEY ${images}
+      env:
+        TAGS: ${{ steps.docker_meta.outputs.tags }}
+        COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
+        COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
+        DIGEST: ${{ steps.build-and-push.outputs.digest }}
 
     # - name: install ssh keys
     #   run: |
