--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -96,7 +96,7 @@ jobs:
 
     - name: Sign image with a key
       run: |
-        images=""
+        images="${{secrets.DOCKERHUB_USERNAME}}/simple-java:latest"
         for tag in ${TAGS}; do
           images+="${tag}@${DIGEST} "
         done
