--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -97,10 +97,10 @@ jobs:
     - name: Sign image with a key
       run: |
         images="${{secrets.DOCKERHUB_USERNAME}}/simple-java:latest"
-        for tag in ${TAGS}; do
-          images+=" ${tag}@${DIGEST}"
-        done
-        echo "Signing images: ${images}"
+        # for tag in ${TAGS}; do
+        #   images+=" ${tag}@${DIGEST}"
+        # done
+        # echo "Signing images: ${images}"
         cosign sign --yes --key env://COSIGN_PRIVATE_KEY ${images}
       env:
         TAGS: ${{ steps.docker_meta.outputs.tags }}
