--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,28 +21,29 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-
+        
     - name: Install Cosign
       uses: sigstore/cosign-installer@v3.6.0
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2.1.0
+    # - name: Set up QEMU
+    #   uses: docker/setup-qemu-action@v2.1.0
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2.5.0
 
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2.1.0
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+    # - name: Login to GitHub Container Registry
+    #   uses: docker/login-action@v2.1.0
+    #   with:
+    #     registry: ghcr.io
+    #     username: ${{ github.actor }}
+    #     password: ${{ secrets.GITHUB_TOKEN }}
 
     - id: docker_meta
       uses: docker/metadata-action@v4.4.0
@@ -65,7 +66,7 @@ jobs:
     #   id: bump
     #   uses: mickem/gh-action-bump-maven-version@1.0.0
 
-    - name: login to docker hub
+    - name: Login to docker hub
       id: docker-hub
       env:
         username: ${{secrets.DOCKERHUB_USERNAME}}
@@ -82,39 +83,33 @@ jobs:
     #   env:
     #     SNYK_TOKEN: ${{ secrets.SNYC_CONTAINER_SCAN }}
         
-    - name: build the docker image
+    - name: Build the docker image
       id: build-docker-image
       run: |
         ls -la 
         docker build . -f Dockerfile -t urkoren/simple-java:latest
 
-
-
-    - name: push the docker image
+    - name: Push the docker image
       id: push-docker-image
       run: docker push ${{secrets.DOCKERHUB_USERNAME}}/simple-java:latest
 
     - name: Sign image with a key
       run: |
         images="${{secrets.DOCKERHUB_USERNAME}}/simple-java:latest"
-        # for tag in ${TAGS}; do
-        #   images+=" ${tag}@${DIGEST}"
-        # done
-        # echo "Signing images: ${images}"
         cosign sign --yes --key env://COSIGN_PRIVATE_KEY ${images}
       env:
         TAGS: ${{ steps.docker_meta.outputs.tags }}
         COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
         COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
         DIGEST: ${{ steps.build-and-push.outputs.digest }}
-
-
-    # - name: install ssh keys
+        
+    # - name: Install ssh keys
     #   run: |
     #     install -m 600 -D /dev/null ~/.ssh/id_rsa
     #     echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
     #     ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
-    # - name: connect and pull
+    
+    # - name: Connect and pull
     #   run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker run urkoren/simple-java:latest && exit"
     # - name: cleanup
     #   run: rm -rf ~/.ssh
